sas-core/main/default/objects/GDPR_Retention_Policy__mdt/GDPR_Retention_Policy__mdt.object-meta.xml
<CustomObject>
    <label>GDPR Retention Policy</label>
    <pluralLabel>GDPR Retention Policies</pluralLabel>
</CustomObject>