sas-core/main/default/objects/GDPR_Retention_Policy__mdt/fields/Related_Case_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Field__c</fullName>
    <label>Related Case Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>