sas-core/main/default/objects/GDPR_Retention_Policy__mdt/fields/Related_Sobject_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Sobject_Field__c</fullName>
    <description>The field on the primary obejct which links the primary object to the parent object (Except cases)</description>
    <label>Related Sobject Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>