sas-core/main/default/objects/GDPR_Retention_Policy__mdt/fields/Related_Sobject_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Sobject_Name__c</fullName>
    <description>SObject name of related SObject.</description>
    <label>Related Sobject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>