sas-core/main/default/objects/GDPR_Retention_Policy__mdt/fields/Retention_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Period_Days__c</fullName>
    <label>Retention Period (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>