sas-core/main/default/objects/GDPR_Retention_Policy__mdt/fields/Scheduled_Batch_Component__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Batch_Component__c</fullName>
    <label>Scheduled Batch Component</label>
    <referenceTo>SBS_ScheduledBatchComponent__mdt</referenceTo>
    <relationshipLabel>GDPR Retention Policies</relationshipLabel>
    <relationshipName>GDPR_Retention_Policies</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>